# ecs-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: query.md
docs/ecs/: README.md
docs/ecs/adapters/: index.md
docs/ecs/adapters/pygame/: game.md  index.md  render.md
docs/ecs/core/: archetype.md  command_buffer.md  component.md  entity_manager.md  event.md  index.md  query.md  resources.md  system.md  world.md
docs/guides/: getting-started.md  query.md
examples/: gravity_sim.py
src/ecs/: __init__.py
src/ecs/adapters/pygame/: __init__.py  game.py  render.py
src/ecs/core/: archetype.py  command_buffer.py  component.py  entity_manager.py  event.py  query.py  resources.py  system.py  world.py
tests/benchmark/: correctness.py  performance.py
tests/core/: test_archetype.py  test_command_buffer.py  test_component.py  test_entity_manager.py  test_event.py  test_query.py  test_resources.py  test_system.py  test_world.py
