[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecs-python"
dynamic = ["version"]
requires-python = ">=3.11"
description = "ECS framework for python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "danbr123" },
]
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
pygame = ["pygame>=2.6.0"]

[dependency-groups]
dev = [
  "black",
  "isort",
  "flake8",
  "pytest",
  "pytest-mock",
  "pre-commit",
  "coverage"
]

[project.urls]
Homepage = "https://github.com/danbr123/ecs-python"

[tool.hatch.version]
path = "src/ecs/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ecs"]
